# SPBU-homework-C

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/: CMakeLists.txt
src/controlWork/: exers1.c  exers2.c  exers3.c
src/controlWork2/: list.c  main.c
src/controlWork2/task1/: list.c  list.h  main.c
src/controlWork2/task2/: main.c
src/hw1/: CMakeLists.txt
src/hw12/: CMakeLists.txt  binaryRepresOfNum.c  binaryRepresOfNum.h  doublePresentation.c  main.c
src/hw2/: CMakeLists.txt  division.c  happyTickets.c  quickMultiplication.c  reverse.c
src/hw3/: CMakeLists.txt  easyBracketBalance.c  substring.c  zeroElems.c
src/hw4/: CMakeLists.txt  Makefile  main.c  sort.c  sort.h  sort.s
src/hw5/: bracketBalance  bracketBalance.c  sortingStation.c  stack.c  stack.h
src/hw6/: CMakeLists.txt  cycleList.c  cycleList.h  main.c  sortList.c  sortList.h
src/hw6/cycleList/: CMakeLists.txt  cycleList.c  cycleList.h  main.c
src/hw6/sortList/: CMakeLists.txt  main.c  sortList.c  sortList.h
src/hw9/bracketBalance/: CMakeLists.txt  bracketBalance.c
src/hw9/sortingStation/: CMakeLists.txt  sortingStation.c
src/hw9/stack/: CMakeLists.txt  stack.c  stack.h
tests/: CMakeLists.txt
tests/binaryRepres/: CMakeLists.txt  tests.c
tests/sortList/: CMakeLists.txt  test.c  utils.c  utils.h
